# CMakeTest

./: CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  config.h.in  main.cpp  run.sh
lib/: SensorData.cpp  SensorData.h  matte.cpp  matte.h
templates/: duration.yml  print-date.yml
test/: CMakeLists.txt  SensorData_TEST.cpp  main.cpp  matte_TEST.cpp
